src/wrapper/torch_api_generated.h

void atg_remainder(tensor *, tensor self, tensor other);
void atg_remainder_(tensor *, tensor self, tensor other);
void atg_remainder_out(tensor *, tensor result, tensor self, tensor other);
void atg_repeat(tensor *, tensor self, long int *repeats_data, int repeats_len);
void atg_replication_pad1d(tensor *, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad1d_backward(tensor *, tensor grad_output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad1d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad1d_forward(tensor *, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad1d_forward_out(tensor *, tensor output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad1d_out(tensor *, tensor output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad2d(tensor *, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad2d_backward(tensor *, tensor grad_output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad2d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad2d_forward(tensor *, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad2d_forward_out(tensor *, tensor output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad2d_out(tensor *, tensor output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad3d(tensor *, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad3d_backward(tensor *, tensor grad_output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad3d_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad3d_forward(tensor *, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad3d_forward_out(tensor *, tensor output, tensor self, long int *padding_data, int padding_len);
void atg_replication_pad3d_out(tensor *, tensor output, tensor self, long int *padding_data, int padding_len);
void atg_reshape(tensor *, tensor self, long int *shape_data, int shape_len);
void atg_reshape_as(tensor *, tensor self, tensor other);
void atg_resize_(tensor *, tensor self, long int *size_data, int size_len);
void atg_resize_as_(tensor *, tensor self, tensor the_template);
void atg_rfft(tensor *, tensor self, int64_t signal_ndim, int normalized, int onesided);
void atg_rnn_relu1(tensor *, tensor input, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
void atg_rnn_relu2(tensor *, tensor data, tensor batch_sizes, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
void atg_rnn_relu_cell(tensor *, tensor input, tensor hx, tensor w_ih, tensor w_hh, tensor b_ih, tensor b_hh);
void atg_rnn_tanh1(tensor *, tensor input, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
void atg_rnn_tanh2(tensor *, tensor data, tensor batch_sizes, tensor hx, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
void atg_rnn_tanh_cell(tensor *, tensor input, tensor hx, tensor w_ih, tensor w_hh, tensor b_ih, tensor b_hh);
void atg_roipooling2d_backward(tensor *, tensor input, tensor rois, int64_t pooledHeight, int64_t pooledWidth, double spatialScale, tensor gradOutput, tensor argmaxes);
void atg_roipooling2d_forward(tensor *, tensor input, tensor rois, int64_t pooledHeight, int64_t pooledWidth, double spatialScale);
void atg_round(tensor *, tensor self);
void atg_round_(tensor *, tensor self);
void atg_round_out(tensor *, tensor result, tensor self);
void atg_rrelu(tensor *, tensor self, int training);
void atg_rrelu_(tensor *, tensor self, int training);
void atg_rrelu_with_noise(tensor *, tensor self, tensor noise, int training);
void atg_rrelu_with_noise_(tensor *, tensor self, tensor noise, int training);
void atg_rrelu_with_noise_out(tensor *, tensor output, tensor self, tensor noise, int training);
void atg_rsqrt(tensor *, tensor self);
void atg_rsqrt_(tensor *, tensor self);
void atg_rsqrt_out(tensor *, tensor result, tensor self);
void atg_s_native_addmm(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_s_native_addmm_(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_s_native_addmm_out(tensor *, tensor result, tensor self, tensor mat1, tensor mat2);
void atg_scatter_(tensor *, tensor self, int64_t dim, tensor index, tensor src);
void atg_scatter_add_(tensor *, tensor self, int64_t dim, tensor index, tensor src);
void atg_select(tensor *, tensor self, int64_t dim, int64_t index);
void atg_selu(tensor *, tensor self);
void atg_selu_(tensor *, tensor self);
void atg_set_(tensor *, tensor self, tensor source);
void atg_set_1(tensor *, tensor self);
void atg_set_requires_grad(tensor *, tensor self, int r);
void atg_sigmoid(tensor *, tensor self);
void atg_sigmoid_(tensor *, tensor self);
void atg_sigmoid_out(tensor *, tensor result, tensor self);
void atg_sign(tensor *, tensor self);
void atg_sign_(tensor *, tensor self);
void atg_sign_out(tensor *, tensor result, tensor self);
void atg_sin(tensor *, tensor self);
void atg_sin_(tensor *, tensor self);
void atg_sin_out(tensor *, tensor result, tensor self);
void atg_sinh(tensor *, tensor self);
void atg_sinh_(tensor *, tensor self);
void atg_sinh_out(tensor *, tensor result, tensor self);
void atg_slice(tensor *, tensor self, int64_t dim, int64_t start, int64_t end, int64_t step);
void atg_slogdet(tensor *, tensor self);
void atg_smm(tensor *, tensor self, tensor mat2);
void atg_smooth_l1_loss(tensor *, tensor self, tensor target, int64_t reduction);
void atg_smooth_l1_loss_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_smooth_l1_loss_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_smooth_l1_loss_forward(tensor *, tensor self, tensor target, int64_t reduction);
void atg_smooth_l1_loss_forward_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_smooth_l1_loss_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_soft_margin_loss(tensor *, tensor self, tensor target, int64_t reduction);
void atg_soft_margin_loss_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_soft_margin_loss_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_soft_margin_loss_forward(tensor *, tensor self, tensor target, int64_t reduction);
void atg_soft_margin_loss_forward_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_soft_margin_loss_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_softmax(tensor *, tensor self, int64_t dim);
void atg_softplus(tensor *, tensor self);
void atg_softplus_out(tensor *, tensor output, tensor self);
void atg_softshrink(tensor *, tensor self);
void atg_softshrink_out(tensor *, tensor output, tensor self);
void atg_sort(tensor *, tensor self, int64_t dim, int descending);
void atg_sort_out(tensor *, tensor values, tensor indices, tensor self, int64_t dim, int descending);
void atg_sparse_resize_(tensor *, tensor self, long int *size_data, int size_len, int64_t sparseDims, int64_t denseDims);
void atg_sparse_resize_and_clear_(tensor *, tensor self, long int *size_data, int size_len, int64_t sparseDims, int64_t denseDims);
void atg_sqrt(tensor *, tensor self);
void atg_sqrt_(tensor *, tensor self);
void atg_sqrt_out(tensor *, tensor result, tensor self);
void atg_squeeze1(tensor *, tensor self);
void atg_squeeze2(tensor *, tensor self, int64_t dim);
void atg_squeeze_1(tensor *, tensor self);
void atg_squeeze_2(tensor *, tensor self, int64_t dim);
void atg_sspaddmm(tensor *, tensor self, tensor mat1, tensor mat2);
void atg_sspaddmm_out(tensor *, tensor result, tensor self, tensor mat1, tensor mat2);
void atg_stack(tensor *, tensor *tensors_data, int tensors_len, int64_t dim);
void atg_stack_out(tensor *, tensor result, tensor *tensors_data, int tensors_len, int64_t dim);
void atg_std1(tensor *, tensor self, int unbiased);
void atg_std2(tensor *, tensor self, int64_t dim, int unbiased, int keepdim);
void atg_std_out(tensor *, tensor result, tensor self, int64_t dim, int unbiased, int keepdim);
void atg_sub(tensor *, tensor self, tensor other);
void atg_sub1(tensor *, tensor self, scalar other);