src/stubs/torch_bindings_generated.ml


  let remainder =
    foreign "atg_remainder"
    (ptr t @-> t @-> t @-> returning void)

  let remainder_ =
    foreign "atg_remainder_"
    (ptr t @-> t @-> t @-> returning void)

  let remainder_out =
    foreign "atg_remainder_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let repeat =
    foreign "atg_repeat"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad1d =
    foreign "atg_replication_pad1d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad1d_backward =
    foreign "atg_replication_pad1d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad1d_backward_out =
    foreign "atg_replication_pad1d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad1d_forward =
    foreign "atg_replication_pad1d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad1d_forward_out =
    foreign "atg_replication_pad1d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad1d_out =
    foreign "atg_replication_pad1d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad2d =
    foreign "atg_replication_pad2d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad2d_backward =
    foreign "atg_replication_pad2d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad2d_backward_out =
    foreign "atg_replication_pad2d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad2d_forward =
    foreign "atg_replication_pad2d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad2d_forward_out =
    foreign "atg_replication_pad2d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad2d_out =
    foreign "atg_replication_pad2d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad3d =
    foreign "atg_replication_pad3d"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad3d_backward =
    foreign "atg_replication_pad3d_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad3d_backward_out =
    foreign "atg_replication_pad3d_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad3d_forward =
    foreign "atg_replication_pad3d_forward"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad3d_forward_out =
    foreign "atg_replication_pad3d_forward_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let replication_pad3d_out =
    foreign "atg_replication_pad3d_out"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> returning void)

  let reshape =
    foreign "atg_reshape"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let reshape_as =
    foreign "atg_reshape_as"
    (ptr t @-> t @-> t @-> returning void)

  let resize_ =
    foreign "atg_resize_"
    (ptr t @-> t @-> ptr long @-> int @-> returning void)

  let resize_as_ =
    foreign "atg_resize_as_"
    (ptr t @-> t @-> t @-> returning void)

  let rfft =
    foreign "atg_rfft"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let rnn_relu1 =
    foreign "atg_rnn_relu1"
    (ptr t @-> t @-> t @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> int @-> returning void)

  let rnn_relu2 =
    foreign "atg_rnn_relu2"
    (ptr t @-> t @-> t @-> t @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> returning void)

  let rnn_relu_cell =
    foreign "atg_rnn_relu_cell"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> t @-> returning void)

  let rnn_tanh1 =
    foreign "atg_rnn_tanh1"
    (ptr t @-> t @-> t @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> int @-> returning void)

  let rnn_tanh2 =
    foreign "atg_rnn_tanh2"
    (ptr t @-> t @-> t @-> t @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> returning void)

  let rnn_tanh_cell =
    foreign "atg_rnn_tanh_cell"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> t @-> returning void)

  let roipooling2d_backward =
    foreign "atg_roipooling2d_backward"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> double @-> t @-> t @-> returning void)

  let roipooling2d_forward =
    foreign "atg_roipooling2d_forward"
    (ptr t @-> t @-> t @-> int64_t @-> int64_t @-> double @-> returning void)

  let round =
    foreign "atg_round"
    (ptr t @-> t @-> returning void)

  let round_ =
    foreign "atg_round_"
    (ptr t @-> t @-> returning void)

  let round_out =
    foreign "atg_round_out"
    (ptr t @-> t @-> t @-> returning void)

  let rrelu =
    foreign "atg_rrelu"
    (ptr t @-> t @-> int @-> returning void)

  let rrelu_ =
    foreign "atg_rrelu_"
    (ptr t @-> t @-> int @-> returning void)

  let rrelu_with_noise =
    foreign "atg_rrelu_with_noise"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let rrelu_with_noise_ =
    foreign "atg_rrelu_with_noise_"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let rrelu_with_noise_out =
    foreign "atg_rrelu_with_noise_out"
    (ptr t @-> t @-> t @-> t @-> int @-> returning void)

  let rsqrt =
    foreign "atg_rsqrt"
    (ptr t @-> t @-> returning void)

  let rsqrt_ =
    foreign "atg_rsqrt_"
    (ptr t @-> t @-> returning void)

  let rsqrt_out =
    foreign "atg_rsqrt_out"
    (ptr t @-> t @-> t @-> returning void)

  let s_native_addmm =
    foreign "atg_s_native_addmm"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let s_native_addmm_ =
    foreign "atg_s_native_addmm_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let s_native_addmm_out =
    foreign "atg_s_native_addmm_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let scatter_ =
    foreign "atg_scatter_"
    (ptr t @-> t @-> int64_t @-> t @-> t @-> returning void)

  let scatter_add_ =
    foreign "atg_scatter_add_"
    (ptr t @-> t @-> int64_t @-> t @-> t @-> returning void)

  let select =
    foreign "atg_select"
    (ptr t @-> t @-> int64_t @-> int64_t @-> returning void)

  let selu =
    foreign "atg_selu"
    (ptr t @-> t @-> returning void)

  let selu_ =
    foreign "atg_selu_"
    (ptr t @-> t @-> returning void)

  let set_ =
    foreign "atg_set_"
    (ptr t @-> t @-> t @-> returning void)

  let set_1 =
    foreign "atg_set_1"
    (ptr t @-> t @-> returning void)

  let set_requires_grad =
    foreign "atg_set_requires_grad"
    (ptr t @-> t @-> int @-> returning void)

  let sigmoid =
    foreign "atg_sigmoid"
    (ptr t @-> t @-> returning void)

  let sigmoid_ =
    foreign "atg_sigmoid_"
    (ptr t @-> t @-> returning void)

  let sigmoid_out =
    foreign "atg_sigmoid_out"
    (ptr t @-> t @-> t @-> returning void)

  let sign =
    foreign "atg_sign"
    (ptr t @-> t @-> returning void)

  let sign_ =
    foreign "atg_sign_"
    (ptr t @-> t @-> returning void)

  let sign_out =
    foreign "atg_sign_out"
    (ptr t @-> t @-> t @-> returning void)

  let sin =
    foreign "atg_sin"
    (ptr t @-> t @-> returning void)

  let sin_ =
    foreign "atg_sin_"
    (ptr t @-> t @-> returning void)

  let sin_out =
    foreign "atg_sin_out"
    (ptr t @-> t @-> t @-> returning void)

  let sinh =
    foreign "atg_sinh"
    (ptr t @-> t @-> returning void)

  let sinh_ =
    foreign "atg_sinh_"
    (ptr t @-> t @-> returning void)

  let sinh_out =
    foreign "atg_sinh_out"
    (ptr t @-> t @-> t @-> returning void)

  let slice =
    foreign "atg_slice"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let slogdet =
    foreign "atg_slogdet"
    (ptr t @-> t @-> returning void)

  let smm =
    foreign "atg_smm"
    (ptr t @-> t @-> t @-> returning void)

  let smooth_l1_loss =
    foreign "atg_smooth_l1_loss"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let smooth_l1_loss_backward =
    foreign "atg_smooth_l1_loss_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let smooth_l1_loss_backward_out =
    foreign "atg_smooth_l1_loss_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let smooth_l1_loss_forward =
    foreign "atg_smooth_l1_loss_forward"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let smooth_l1_loss_forward_out =
    foreign "atg_smooth_l1_loss_forward_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let smooth_l1_loss_out =
    foreign "atg_smooth_l1_loss_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let soft_margin_loss =
    foreign "atg_soft_margin_loss"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let soft_margin_loss_backward =
    foreign "atg_soft_margin_loss_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let soft_margin_loss_backward_out =
    foreign "atg_soft_margin_loss_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let soft_margin_loss_forward =
    foreign "atg_soft_margin_loss_forward"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let soft_margin_loss_forward_out =
    foreign "atg_soft_margin_loss_forward_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let soft_margin_loss_out =
    foreign "atg_soft_margin_loss_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let softmax =
    foreign "atg_softmax"
    (ptr t @-> t @-> int64_t @-> returning void)

  let softplus =
    foreign "atg_softplus"
    (ptr t @-> t @-> returning void)

  let softplus_out =
    foreign "atg_softplus_out"
    (ptr t @-> t @-> t @-> returning void)

  let softshrink =
    foreign "atg_softshrink"
    (ptr t @-> t @-> returning void)

  let softshrink_out =
    foreign "atg_softshrink_out"
    (ptr t @-> t @-> t @-> returning void)

  let sort =
    foreign "atg_sort"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let sort_out =
    foreign "atg_sort_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let sparse_resize_ =
    foreign "atg_sparse_resize_"
    (ptr t @-> t @-> ptr long @-> int @-> int64_t @-> int64_t @-> returning void)

  let sparse_resize_and_clear_ =
    foreign "atg_sparse_resize_and_clear_"
    (ptr t @-> t @-> ptr long @-> int @-> int64_t @-> int64_t @-> returning void)

  let sqrt =
    foreign "atg_sqrt"
    (ptr t @-> t @-> returning void)

  let sqrt_ =
    foreign "atg_sqrt_"
    (ptr t @-> t @-> returning void)

  let sqrt_out =
    foreign "atg_sqrt_out"
    (ptr t @-> t @-> t @-> returning void)

  let squeeze1 =
    foreign "atg_squeeze1"
    (ptr t @-> t @-> returning void)

  let squeeze2 =
    foreign "atg_squeeze2"
    (ptr t @-> t @-> int64_t @-> returning void)

  let squeeze_1 =
    foreign "atg_squeeze_1"
    (ptr t @-> t @-> returning void)

  let squeeze_2 =
    foreign "atg_squeeze_2"
    (ptr t @-> t @-> int64_t @-> returning void)

  let sspaddmm =
    foreign "atg_sspaddmm"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let sspaddmm_out =
    foreign "atg_sspaddmm_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let stack =
    foreign "atg_stack"
    (ptr t @-> ptr t @-> int @-> int64_t @-> returning void)

  let stack_out =
    foreign "atg_stack_out"
    (ptr t @-> t @-> ptr t @-> int @-> int64_t @-> returning void)

  let std1 =
    foreign "atg_std1"
    (ptr t @-> t @-> int @-> returning void)

  let std2 =
    foreign "atg_std2"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let std_out =
    foreign "atg_std_out"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> int @-> returning void)

  let sub =
    foreign "atg_sub"
    (ptr t @-> t @-> t @-> returning void)

  let sub1 =
    foreign "atg_sub1"
    (ptr t @-> t @-> scalar @-> returning void)
